# performance_and_security

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: compat.h  return_oriented_prog.cpp  security_defenses.cpp  security_measure_overhead.cpp  stack_smashing.cpp
